@@ -52,6 +52,7 @@ chart.hpp \
 chunk_vector.hpp \
 compact_hashtable.hpp \
 compact_map.hpp \
+compact_set.hpp \
 compact_trie.hpp \
 compact_trie_dense.hpp \
 compact_trie_set.hpp \
