@@ -3,8 +3,8 @@
 //  Copyright(C) 2012 Taro Watanabe <taro.watanabe@nict.go.jp>
 //
 
-#ifndef __UTILS__COMPACT_MAP__HPP__
-#define __UTILS__COMPACT_MAP__HPP__
+#ifndef __UTILS__COMPACT_SET__HPP__
+#define __UTILS__COMPACT_SET__HPP__
 
 #include <utils/compact_hashtable.hpp>
 
@@ -12,25 +12,23 @@
 
 namespace utils
 {
-  template <typename Key,
-	    typename Data,
-	    typename Hash=boost::hash<Key>,
-	    typename Pred=std::equal_to<Key>,
-	    typename Alloc=std::allocator<std::pair<const Key, Data> > >
+  template <typename Tp,
+	    typename Hash=boost::hash<Tp>,
+	    typename Pred=std::equal_to<Tp>,
+	    typename Alloc=std::allocator<Tp > >
   class compact_map 
   {
   public:
-    typedef Key                                    key_type;
-    typedef Data                                   mapped_type;
-    typedef std::pair<const key_type, mapped_type> value_type;
+    typedef Tp value_type;
     
   private:
     struct extract_key
     {
-      const Key& operator()(const value_type& x) const { return x.first; }
-      const Key& operator()(value_type& x) const { return x.first; }
+      const Tp& operator()(const Tp& x) const { return x; }
+      Tp& operator()(Tp& x) const { return x; }
     };
-    typedef compact_hashtable<key_type, value_type, extract_key, Hash, Pred, Alloc> impl_type;
+
+    typedef compact_hashtable<Tp, Tp, extract_key, Hash, Pred, Alloc> impl_type;
 
   public:
     typedef typename impl_type::size_type  size_type;
@@ -42,27 +40,14 @@ namespace utils
     typedef typename impl_type::const_reference const_reference;
 
   public:
-    compact_map(const size_type __size=8, const Hash& __hash=Hash(), const Pred& __equal=Pred())
+    compact_set(const size_type __size=8, const Hash& __hash=Hash(), const Pred& __equal=Pred())
       : impl(__size) {}
 
   public:
     void assign(const compact_map& x) { impl.assign(x.impl); }
     void swap(compact_map& x) { impl.swap(x.impl); }
 
-  private:
-    struct default_value_type
-    {
-      value_type operator()(const Key& key) {
-	return std::make_pair(key, Data());
-      }
-    };
-    
   public:
-    inline mapped_type& operator[](const key_type& x)
-    {
-      return impl.template insert_default<default_value_type>(x).second;
-    }
-    
     const_iterator begin() const { return impl.begin(); }
     iterator begin() { return impl.begin(); }
     const_iterator end() const { return impl.end(); }
@@ -76,8 +61,8 @@ namespace utils
 
     void rehash(size_type hint) { impl.rehash(hint); }
     
-    const_iterator find(const key_type& x) const { return impl.find(x); }
-    iterator find(const key_type& x) { return impl.find(x); }
+    const_iterator find(const value_type& x) const { return impl.find(x); }
+    iterator find(const value_type& x) { return impl.find(x); }
 
     std::pair<iterator, bool> insert(const value_type& x) { return impl.insert(x); }
 
@@ -86,15 +71,15 @@ namespace utils
     template <typename Iterator>
     void insert(Iterator first, Iterator last) { impl.insert(first, last); }
     
-    size_type erase(const key_type& key) { return impl.erase(key); }
+    size_type erase(const value_type& key) { return impl.erase(key); }
     void erase(iterator iter) { impl.erase(iter); }
     void erase(const_iterator iter) { impl.erase(iter); }
 
     void erase(iterator first, iterator last) { impl.erase(first, last); }
     void erase(const_iterator first, const_iterator last) { impl.erase(first, last); }
 
-    void set_empty_key(const key_type& key) { impl.set_empty_key(std::make_pair(key, mapped_type())); }
-    void set_deleted_key(const key_type& key) { impl.set_deleted_key(std::make_pair(key, mapped_type())); }
+    void set_empty_key(const value_type& key) { impl.set_empty_key(key); }
+    void set_deleted_key(const value_type& key) { impl.set_deleted_key(key); }
     
   private:
     impl_type impl;
@@ -104,10 +89,10 @@ namespace utils
 
 namespace std
 {
-  template <typename Key, typename Data, typename Hash, typename Pred, typename Alloc>
+  template <typename Tp, typename Hash, typename Pred, typename Alloc>
   inline
-  void swap(utils::compact_map<Key,Data, Hash,Pred,Alloc>& x,
-	    utils::compact_map<Key,Data, Hash,Pred,Alloc>& y)
+  void swap(utils::compact_set<Tp, Hash,Pred,Alloc>& x,
+	    utils::compact_set<Tp, Hash,Pred,Alloc>& y)
   {
     x.swap(y);
   }
